--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ input, select {
   position: fixed;
   width: 100%;
   z-index: 98;
-  font-family: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
+  font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
 }
 
 .gnavWrap {
@@ -171,13 +171,13 @@ input, select {
 .gnavMenuItem a {
   color: #fff;
   font-size: 2em;
-  font-weight: bold;
+  font-weight: 600;
   text-decoration: none;
   transition: .5s;
 }
 
 .gnavMenuItemLower a {
-  font-size: 1.6em;
+  font-size: 1.8em;
   font-weight: normal;
 }
 
@@ -199,6 +199,7 @@ input, select {
   padding-top: 80px;
   color: #fff;
   font-weight: bold;
+  font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
 }
 
 .scrollBtn span {
@@ -262,7 +263,7 @@ input, select {
 /*scroll end*/
 body {
   overflow-x: hidden;
-  font-family: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
+  font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
 }
 
 body > video {
@@ -297,8 +298,22 @@ body .layerHdrmov {
   position: fixed;
   width: 100%;
   z-index: 100;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(5px);
+  animation-name: fadein;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .top .navBer .navLogo img {
@@ -403,7 +418,7 @@ section p {
 }
 
 .toc {
-  background: #fff url(../image/common/connected.png) repeat;
+  background: #eee url(../image/common/connected.png) repeat;
   padding-top: 40px;
 }
 
@@ -414,29 +429,44 @@ section p {
   right: 0;
 }
 
-.toc .cardContainer {
+.cardContainerWrap {
+  margin: 0 auto;
+}
+
+.cardContainerWrap .cardContainer {
   display: flex;
   flex-flow: row wrap;
   margin: 0 auto;
   padding: 90px 20px 0;
   max-width: 1200px;
-  justify-content: space-evenly;
+  justify-content: start;
   border-top: 3px solid #666;
 }
 
 @media (max-width: 750px) {
-  .toc .cardContainer {
+  .cardContainerWrap .cardContainer {
     padding: 90px 0 0 0;
     display: block;
   }
 }
 
-.cardWrap {
+.cardContainerWrap .cardContainer .cardWrap {
+  background: #fff;
   width: calc( ( 100% - 100px ) / 3);
   text-align: left;
+  margin-right: 50px;
   margin-bottom: 50px;
   text-decoration: none;
-  background: #fff;
+  transition-duration: 300ms;
+}
+
+.cardContainerWrap .cardContainer .cardWrap:nth-child(3n) {
+  margin-right: 0;
+}
+
+.cardContainerWrap .cardContainer .cardWrap:hover {
+  box-shadow: 0px 6px 8px #333;
+  opacity: 0.6;
 }
 
 .card {
@@ -573,7 +603,7 @@ footer small {
 }
 
 .titleImgWrap .titleLogoImg {
-  width: 350px;
+  height: 160px;
   position: absolute;
   top: 0;
   left: 0;
@@ -585,7 +615,8 @@ footer small {
 
 @media (max-width: 750px) {
   .titleImgWrap .titleLogoImg {
-    width: 65%;
+    width: 75%;
+    height: auto;
   }
 }
 
@@ -681,7 +712,7 @@ footer small {
 }
 
 .lowerInformation {
-  background: #fff url(../image/common/rocky-wall.png) repeat;
+  background: #fff url(../image/common/connected.png) repeat;
 }
 
 .lowerInformation h1 {
@@ -735,8 +766,12 @@ footer small {
   margin-bottom: 0;
 }
 
+.informationText p span {
+  font-weight: bold;
+}
+
 .lowerMap {
-  background: url(../image/common/connected.png) repeat;
+  background: url(../image/common/rocky-wall.png) repeat;
 }
 
 .lowerMap > .sectionContentWrap {
