--- a/css/style.scss
+++ b/css/style.scss
@@ -441,13 +441,11 @@ section {
                 box-shadow: 0px 6px 8px #333;
                 opacity: 0.6;
             }
-            &:last-child {
-                pointer-events:none;
-            }
         }
     }
 }
 .card {
+    background: #fff;
     box-shadow: 0 2px 5px #ccc;
     @include sp {
         margin-bottom: 30px;
@@ -469,7 +467,10 @@ section {
         margin-top: 8px;
         padding-bottom: 20px;
 		font-weight: 300;
-	}
+    }
+    > div {
+        height: 74px;
+    }
 }
 .tocBtn {
     display: inline-block;
